--- a/macos.html
+++ b/macos.html
@@ -1,3 +1,4 @@
-<p align=center>Download older macOS installers from the App Store!</p>
+<b><p align=center style=font size: 40px>Download older macOS installers from the App Store!</p></b>
+<p align=center>Note: You must use a Mac running OS X 10.9 or newer to download these.</p>
 <p>&nbsp;</p>
-<p><a href="http://example.com/">macOS Seirra</a></p>
+<p align=center><a href="https://apps.apple.com/us/app/macos-sierra/id1127487414?mt=12">macOS Seirra</a></p>
