--- a/macos.html
+++ b/macos.html
@@ -1,4 +1,16 @@
-<b><p align=center style=font size: 40px>Download older macOS installers from the App Store!</p></b>
+<b><p align=center style=font size: 40px>Direct links to older macOS installers on the App Store!</p></b>
 <p align=center>Note: You must use a Mac running OS X 10.9 or newer to download these.</p>
 <p>&nbsp;</p>
 <p align=center><a href="https://apps.apple.com/us/app/macos-sierra/id1127487414?mt=12">macOS Seirra</a></p>
+<p align=center><a herf="https://apps.apple.com/us/app/macos-high-sierra/id1246284741?mt=12">macOS High Seirra</a></p>
+<p align=center><a herf="https://apps.apple.com/us/app/macos-mojave/id1398502828?mt=12">macOS Mojave</a></p>
+<p align=center><a herf="https://apps.apple.com/us/app/macos-catalina/id1466841314?mt=12">macOS Catalina</a></p>
+<p align=center><a herf="https://apps.apple.com/us/app/macos-big-sur/id1526878132?mt=12">macOS Big Sur</a></p>
+<p align=center><a herf="https://apps.apple.com/us/app/macos-monterey/id1576738294?mt=12">macOS Monterey</a></p>
+<p align=center><a herf="https://apps.apple.com/us/app/macos-ventura/id1638787999?mt=12">macOS Vertura</a></p>
+<p align=center><a herf="https://apps.apple.com/us/app/macos-sonoma/id6450717509?mt=12">macOS Somona</a></p>
+
+
+
+
+  
